Improve title and favicon displays

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NickSite</title>
+  <title>i&nbsp;&nbsp;c&nbsp;&nbsp;k&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;V&nbsp;&nbsp;a&nbsp;&nbsp;c&nbsp;&nbsp;c&nbsp;&nbsp;a&nbsp;&nbsp;r&nbsp;&nbsp;o</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
